ekart-app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tetris
  name: tetris
  namespace: abastidasc-devops
spec:
  port:
    targetPort: 8070
  to:
    kind: Service
    name: tetris
    weight: 100
